src/snapshots/cornercase__ui__tests__dialogs__renders_the_usage_windows.snap
---
source: src/ui.rs
expression: "render(&with(Overlay::Usage(usage()))).backend()"
---
" ▄▀▀▀ cornercase  ┌ usage ───────────────────────────────────────────────────────┐                  "
" █                │ Claude Code · max plan                                       │                  "
"                  │                                                              │                  "
"  ⌕ search project│ session (5h)                           7% · resets in 2h 13m │                  "
"                  │ █████░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░ │                  "
" projects         │                                                              │                  "
"                  │ week                                   82% · resets in 3d 4h │                  "
"▌ cornercase (1)  │ ██████████████████████████████████████████████████░░░░░░░░░░ │                  "
"                  │                                                              │                  "
"  + new project   │ week · Fable                                            100% │                  "
"                  │ ████████████████████████████████████████████████████████████ │                  "
"                  │                                                              │                  "
"                  │ extra usage: 12.34 USD of 50.00 USD                          │                  "
"                  │                                                              │                  "
" ─────────────────│ updated 2m ago                                               │                  "
"  settings        │                                                        done  │                  "
"  usage           └──────────────────────────────────────────────────────────────┘                  "
"  quit                         │                         │                                          "
