src/snapshots/cornercase__ui__tests__dialogs__renders_the_worktree_toggle.snap
---
source: src/ui.rs
expression: "render(&with(Overlay::Form(new_workspace_form(true)))).backend()"
---
" ▄▀▀▀ cornercase                                         │                                          "
" █                                                       │                                          "
"                                                         │                                          "
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                  ┌ new workspace ───────────────────────────────────────────────┐                  "
" projects         │ name                                                         │                  "
"                  │ › feat/login                                                 │                  "
"▌ cornercase (1)  │ in ~/.cornercase/worktrees/cornercase/feat-login             │                  "
"                  │ [x] with its own worktree                                    │                  "
"  + new project   │                                                              │                  "
"                  │                                                              │                  "
"                  │                                                              │                  "
"                  │                                             create   cancel  │                  "
"                  └──────────────────────────────────────────────────────────────┘                  "
"                               │                         │                                          "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  quit                         │                         │                                          "
