src/snapshots/cornercase__ui__tests__dialogs__renders_usage_while_loading.snap
---
source: src/ui.rs
expression: "render(&with(Overlay::Usage(loading))).backend()"
---
" ▄▀▀▀ cornercase                                         │                                          "
" █                                                       │                                          "
"                                                         │                                          "
"  ⌕ search projects, workspaces, tabs                    │                                          "
"                                                         │                                          "
" projects                      │ workspaces              │                                          "
"                  ┌ usage ───────────────────────────────────────────────────────┐                  "
"▌ cornercase (1)  │ Claude Code · max plan                                       │                  "
"                  │                                                              │                  "
"  + new project   │ loading…                                                     │                  "
"                  │                                                        done  │                  "
"                  └──────────────────────────────────────────────────────────────┘                  "
"                               │                         │                                          "
"                               │                         │                                          "
" ───────────────────────────── │                         │                                          "
"  settings                     │                         │                                          "
"  usage                        │                         │                                          "
"  quit                         │                         │                                          "
